fixed some issues

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
                     <h1 class="fst-italic lh-1 mb-4">Our Website is 404</h1>
-                    <p class="mb-5"><a href="#">@arishtisecurity</a></p>
+                    <p class="mb-5"><a href="https://twitter.com/arishtisecurity">@arishtisecurity</a></p>
                 </div>
             </div>
         </div>
@@ -32,7 +32,7 @@
         <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
         <div class="social-icons">
             <div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0">
-                <a class="btn btn-dark m-3" href="https://twitter.com/arishtilive"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-dark m-3" href="https://twitter.com/arishtisecurity"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-dark m-3" href="https://www.facebook.com/ArishtiLive.in"><i class="fab fa-facebook-f"></i></a>
             </div>
         </div>
